# Calamus

./: CMakeLists.txt  Claude.md  README.md  audioengine.cpp  audioengine.h  calamusmain.cpp  calamusmain.h  calamusmain.ui  canvas.cpp  canvas.h  compositionsettings.cpp  compositionsettings.h  container.cpp  container.h  container.ui  curve.cpp  curve.h  dnaeditordialog.cpp  dnaeditordialog.h  driftengine.cpp  easingapplicator.cpp  easingapplicator.h  envelopecurvecanvas.cpp  envelopeengine.cpp  envelopeengine.h  envelopelibraryDialog.cpp  envelopevisualizer.cpp  formantbody.cpp  frequencylabels.cpp  gateprocessor.cpp  gateprocessor.h  harmonicgenerator.cpp  harmonicgenerator.h  main.cpp  note.cpp  note.h  phrasegroup.cpp  phrasegroup.h  rolloffprocessor.cpp  rolloffprocessor.h  (+18 more)
.claude/: settings.local.json
docs/: Calamus Container Gallery v3.htm
docs/md format/: Calamus Architecture v1.4.md  Calamus Input Engine Specification v1.2.md  Container Port Specification v1.2.md  _MConverter.eu_Calamus Architecture v1.4.md  _MConverter.eu_Calamus Sound Engine Foundations v2.1.md  _MConverter.eu_calamus_library_dialogs_specification_v1_0.md  calamus_class_diagram_v0.3.md  calamus_composition_tab_spec.md  calamus_dialogs_specification_v1_0.md  calamus_library_dialogs_specification_v1_1.md  calamus_main_menu_specification_v1_0.md  calamus_score_canvas_specification_v1.md  calamus_sound_engine_tab.md  calamus_sounit_builder_canvas_specification_v1_0.md
